added masking for phone no and solved few issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,4 +91,7 @@ label.error {display:block;}
 	
 .no-access{width:100%; min-height:850px; background:#fff;}
 .no-access img {padding-top:100px;}	
+
+.date-picker-margin {margin: 0;}
+.input-group .hasDatepicker + label.error{position:absolute;top:42px;}
 	
