--- a/app/views/licenses/_licenses_info.html.erb
+++ b/app/views/licenses/_licenses_info.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body"> 
-	    <div class="table-responsive">
+	    <div class="">
 		    <table class="table" id="licenses_table">
                 <thead>
                     <tr>
@@ -30,9 +30,10 @@
 			       <% end %> 
                </tbody>
            </table>
-	    </div>
+	    
 	   <div data-no-turbolink>
 	   <%= paginate @licenses %>
+	   </div>
 	   </div>
     </div>	
 </div>
