added bread crumbs for import list and solved few design issues

--- a/app/views/users/import.html.erb
+++ b/app/views/users/import.html.erb
@@ -1,7 +1,6 @@
-<%#= form_tag 'users/delete_user', remote: true do %>
   <div class="panel panel-default">
 	<div class="panel-body"> 
-	 <div class="table-responsive">
+	 <div class="">
 		<table class="table" id="users_table">
             <thead>
                 <tr>
