--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,19 +18,19 @@
 		        <%=link_to 'Add School Admin', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 			<%end%>
 			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "school_admin", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
-			<%=link_to 'Import School Admin List', import_list_users_path(:list_type => "school_admin"), :class=>"btn btn-success btn-xs"%>
+			<%=link_to 'Import School Admin List', import_list_users_path(:list_type => "school_admin",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 		<%elsif @role_id.name.eql?('Teacher')%>
 		    <% if (can? :create, :users) && (can? :create_teacher, :users) %>
 			    <%=link_to 'Add Teacher', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 		    <%end%>	
 			<%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "teacher", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
-			<%=link_to 'Import Teacher List', import_list_users_path(:list_type => "teacher"), :class=>"btn btn-success btn-xs"%>
+			<%=link_to 'Import Teacher List', import_list_users_path(:list_type => "teacher",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 		<%elsif @role_id.name.eql?('Student')%>
 			<% if ((can? :read, :users) && (can? :read_student, :users)) || ((can? :read, :users) && (can? :manage_student, :users)) %>
 			    <%=link_to 'Add Student', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 			<%end%>
 			<%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "student", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
-			<%=link_to 'Import Student List', import_list_users_path(:list_type => "student"), :class=>"btn btn-success btn-xs"%>
+			<%=link_to 'Import Student List', import_list_users_path(:list_type => "student",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 		<%end%>
 		<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
 	</div>
