--- a/app/views/schools/import.html.erb
+++ b/app/views/schools/import.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
 	<div class="panel-body"> 
-		<div class="table-responsive">
+		<div class="">
 			<table class="table" id="school_table">
 	            <thead>
 	                <tr>
