removed astrik mark for classroom code

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -22,7 +22,7 @@
 						<% if action_name.eql?("edit") || action_name.eql?("update")%> 
 	                    <div class="col-sm-3">
 	                        <div class="form-group">
-	                    	    <%= f.label :code, "Classroom Code", :class=>"control-label" %><span class="asterisk">*</span> </br>
+	                    	    <%= f.label :code, "Classroom Code", :class=>"control-label" %> </br>
 	                    	    <%= @classroom.code %>
 	                        </div>
 	                    </div>
