--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -8,16 +8,9 @@
 	        <div class="panel-body">
 				<%= form_for(@classroom, :html=>{:class=>"form_validation classroom_form"} ) do |f| %>
 				    <%=f.hidden_field :school_id, :value=>@school.id%>
-				    <% if @classroom.errors.any? %>
-				    <div id="error_explanation">
-				        <!-- <h4><%#= pluralize(@classroom.errors.count, "error") %> prohibited this classroom from being saved:</h4> -->
-				        <ul>
-				            <% @classroom.errors.full_messages.each do |msg| %>
-				                <%= msg %>
-				            <% end %>
-				        </ul>
-				    </div>
-				  	<% end %>
+					<div id="errorbox">	
+					    <%= render "shared/error_messages", :object=>@classroom %>
+					</div>
 	                <div class="row">
 						<% if action_name.eql?("edit") || action_name.eql?("update")%> 
 	                    <div class="col-sm-3">
@@ -105,8 +98,8 @@
   	                                  <%= select_tag "student_assigned_id", options_from_collection_for_select(@assigned_students, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
   	                              </div>
   	                              <div class="assign_arrows">
-  	                                  <a href="#Remove" class="remove"> Remove >> </a><br />
-  	                                  <a href="#Add" class="add"> << Add </a>
+  	                                  <a href="#Remove" class="remove_stud"> Remove >> </a><br />
+  	                                  <a href="#Add" class="add_stud"> << Add </a>
   	                              </div>
   	                              <div style="float:left;" id="all_student_div">
   	                                  <%= select_tag "all_student_id", options_from_collection_for_select(@school_specific_students, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
@@ -125,53 +118,9 @@
 
 <script type="text/javascript">
 	showHideMenu('li_school');
-	
 	<% unless current_user.is_web_admin?%>
 	  showHideMenu('li_options');	
 	<%end%>
-	
-	// Assign student to a classroom, multi select
-	    $(function () {
-	      $('select#student_assigned_id').listbox({'searchbar': true});
-	      $('select#all_student_id').listbox({'searchbar': true});
-	    });
-	  $(document).ready(function() {
-
-	    $('.remove').click(function(e) {
-	      student_selected_ids = $("#student_selected_ids").val().split(" ");
-	      $('#student_assigned_id option:selected').each(function(){
-	        student_selected_ids.removeByValue(this.value)
-	      });
-	      $('#student_assigned_id option:selected').remove();
-	      $("#student_selected_ids").val(student_selected_ids.join(" "));
-	      $('#student_assigned_div').children('div .lbjs').remove();
-	      $('select#student_assigned_id').listbox({'searchbar': true});
-	    });
-
-	    $('.add').on('click', function(){
-	      student_selected_ids = []
-	      var selectedOpts = $('#all_student_id option:selected').clone();
-	      selectedOpts.each(function(i){
-	        if($("#student_assigned_id option[value='"+this.value+"']").length <= 0){
-	          $('#student_assigned_id').append(this);
-	          student_selected_ids.push(this.value);
-	        }
-	      });
-	      $("#student_selected_ids").val($.merge($("#student_selected_ids").val().split(" "), student_selected_ids).join(" "));
-	      $('#student_assigned_div').children('div .lbjs').remove();
-	      $('select#student_assigned_id').listbox({'searchbar': true});
-	    });
-	  });
-  
-	  Array.prototype.removeByValue = function(val) {
-	    for(var i=0; i<this.length; i++) {
-	        if(this[i] == val) {
-	            this.splice(i, 1);
-	            break;
-	        }
-	    }
-	}
-    
-</script>
+/script>
 
 
