--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,16 +8,9 @@
 	        	<%= form_for @user, :html=>{:class=>"form_validation user_form", multipart: true} do |f| %>
 				    <%=f.hidden_field :role_id, :value=>@role_id.id%>
 					<%=f.hidden_field :school_id, :value=>@school.id unless @school.blank? %>
-					<% if @user.errors.any? %>
-				    <div id="error_explanation">
-				        <!-- <h2><%#= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2> -->
-				        <ul>
-				            <% @user.errors.full_messages.each do |msg| %>
-				                <%= msg %>
-				            <% end %>
-				        </ul>
-				    </div>
-					<% end %>
+					<div id="errorbox">	
+					    <%= render "shared/error_messages", :object=>@user %>
+					</div>
 		        <%= render 'common_fields', f: f %>
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
