Solved lic-user-delete prob

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -158,18 +158,18 @@
       </div>
       <div class="modal-body sample_list_links_div">
 		  <div id="school_admin" style='display:none;'>
-		  		<%=link_to 'Download Sample Spreadsheet', download_sample_list_users_path(:format => :xls, :list_type => "school_admin"), :class=>"btn btn-success btn-xs"%> | 
-		  		<%=link_to 'Download Sample CSV', download_sample_list_users_path(:format => :csv, :list_type => "school_admin"), :class=>"btn btn-success btn-xs"%> 
+		  		<%=link_to 'Download xls format sample', download_sample_list_users_path(:format => :xls, :list_type => "school_admin"), :class=>"btn btn-success btn-xs"%>  
+		  		<%=link_to 'Download csv format sample', download_sample_list_users_path(:format => :csv, :list_type => "school_admin"), :class=>"btn btn-success btn-xs"%> 
 		  </div>
 
 		  <div id="teacher" style='display:none;'>
-		  		<%=link_to 'Download Sample Spreadsheet', download_sample_list_users_path(:format => :xls, :list_type => "teacher"), :class=>"btn btn-success btn-xs"%> | 
-		  		<%=link_to 'Download Sample CSV', download_sample_list_users_path(:format => :csv, :list_type => "teacher"), :class=>"btn btn-success btn-xs"%> 
+		  		<%=link_to 'Download xls format sample', download_sample_list_users_path(:format => :xls, :list_type => "teacher"), :class=>"btn btn-success btn-xs"%>  
+		  		<%=link_to 'Download csv format sample', download_sample_list_users_path(:format => :csv, :list_type => "teacher"), :class=>"btn btn-success btn-xs"%> 
 		  </div>
 
 		  <div id="student" style='display:none;'>
-		  		<%=link_to 'Download Sample Spreadsheet', download_sample_list_users_path(:format => :xls, :list_type => "student"), :class=>"btn btn-success btn-xs"%> | 
-		  		<%=link_to 'Download Sample CSV', download_sample_list_users_path(:format => :xls, :list_type => "student"), :class=>"btn btn-success btn-xs"%> 
+		  		<%=link_to 'Download xls format sample', download_sample_list_users_path(:format => :xls, :list_type => "student"), :class=>"btn btn-success btn-xs"%> 
+		  		<%=link_to 'Download csv format sample', download_sample_list_users_path(:format => :csv, :list_type => "student"), :class=>"btn btn-success btn-xs"%> 
 		  </div>
 	  </div>
       <!-- <div class="modal-footer">
