--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -39,7 +39,7 @@
 	                </div>
 	                <div class="col-sm-6">
 	                    <div class="form-group">
-		   			    	<%= f.label :phone, :class=>"control-label"%>
+		   			    	<%= f.label :phone, "Phone Number",  :class=>"control-label"%>
 		   			    	<%= f.text_field :phone, :class=>"form-control"%>
 						</div>
 	                </div>
