--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -16,7 +16,7 @@
 	                <div class="col-sm-3">
 	                    <div class="form-group">
 	                    	<%= f.label :username, "Username", :class=>"control-label" %><span class="asterisk">*</span>
-							<%= f.text_field :username, :class=>"form-control" %>
+							<%= f.text_field :username, :class=>"form-control clearfix" %>
 		    			    <%#= f.text_field :username, :class=>"form-control username_validation" %>
 							<span class="help-inline error_box"></span>
 	                    </div>
@@ -119,7 +119,7 @@
 			   			    </tr>
 			   			    <tr>
 			   				    <td>
-			   					    <%= f.file_field :photos %>
+			   					    <%= f.file_field :photos, :class=>"image-file-name" %>
 			   				    </td>
 			   			    </tr>
 			   		    </table>
