--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -64,7 +64,7 @@
 	                <div class="col-sm-6">
 	                    <div class="form-group">
 			    	        <%= f.label :country %><br />
-  							<%= f.country_select :country, {priority: %w(US)}, :disabled => true %>
+  							<%= f.country_select :country, {priority: %w(US)}, :disabled => true, :class=>"country-state-select" %>
 	                    </div>
 	                </div>
 	                <div class="col-sm-6">
@@ -78,8 +78,8 @@
 	            </div>
 	        </div>
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
-				<%= link_to 'Cancel', schools_path, class: "btn btn-white btn-xs"%>
+	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
+				<%= link_to 'Return to School List', schools_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			<% end %>
 	    </div>
