--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,10 @@
 			    	<%= @user.last_name %>
             	</address>
             	<address>
+			    	<strong>Username:</strong>
+			    	<%= @user.username %>
+            	</address>
+            	<address>
 			    	<strong>Phone Number:</strong>
 			    	<%= @user.phone_number %>
             	</address>
