--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,6 +60,7 @@ span.page{padding: 10px !important;}
 .delete-school-list{height:27px !important;}
 .delete-user-list{height:27px !important;}
 .delete-book-list{height:27px !important;}
+.save-btns{height:27px !important;}
 
 label.label-rights { display: inline-block; overflow: hidden; width: 190px;margin-bottom: 10px; }
 label.label-rights input[type=checkbox] {display:inline-block; float:left; margin:4px 5px 0 0;}
@@ -98,3 +99,7 @@ label.error {display:block;}
 .input-group .hasDatepicker + label.error{position:absolute;top:42px;}
 
 .image-file-name{text-overflow:ellipsis; white-space:nowrap; overflow:hidden; width:300px;}	
+
+#school_state_wrapper select, .country-state-select{height:21px; padding:1px 0;}
+
+.no-rec-found{text-align:center;}
