--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,6 +19,7 @@
             	</address>
             	
 			    <div data-no-turbolink>
+					<%= link_to 'Edit', edit_book_path(@book), :class=>"btn btn-success btn-xs" %>
 			        <%= link_to 'Return to Book List', books_path, class: "btn btn-white btn-xs"%>
         	    </div>
 		    </div>
