--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -61,7 +61,7 @@
 				        </div>
 				    <%end%>
 			    <%end%>
-			    <% unless ('edit').eql?action_name%>
+			    <% unless ((('edit').eql?action_name) || (('update').eql?action_name)) %>
 	                <div class="row">
 	                    <div class="col-sm-3">
 	                        <div class="form-group">
