--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,15 +14,15 @@
 		        <%= render 'common_fields', f: f %>
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
+	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
 				<% if @role_id.name.eql?('Web Admin')%>
-					<%= link_to 'Cancel', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
+					<%= link_to 'Return to User List', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
 				<% elsif @role_id.name.eql?('School Admin')%>
-				    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+				    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
 				<% elsif @role_id.name.eql?('Teacher')%>
-				    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+				    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
 				<% elsif @role_id.name.eql?('Student')%>
-				    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+				    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
 				<%end%>
 	        </div>
 			<% end %>
