--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -19,7 +19,7 @@
 		</div>
 		 
 		<div class="table-responsive">
-			<table class="table school-table" id="school_table">
+			<table class="table school-table" data-controller="schools" id="school_table">
 	            <thead>
 	                <tr>
 	                	<th><%= link_to :All, 'javascript:checkAll("school")', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAll("school")', :class => "lnk-typ2" %>  </th>
@@ -37,13 +37,13 @@
 		                <tr class="odd gradeX" data-no-turbolink>
 		                  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
 		                  <td class=""><%= school.code %></td>
-		                  <td class=""><%= link_to school.name, school_path(school), :title=>"View School Details" %></td>
-		                  <td class=""><%= school.district %></td>
-		                  <td class="center "><%= school.city %></td>
+		                  <td class="school-name"><%= link_to school.name, school_path(school), :title=>"View School Details" %></td>
+		                  <td class="quick-edit" data-col="district" id="school-dist"><%= school.district %></td>
+		                  <td class="quick-edit"><%= school.city %></td>
 		                  <%#= @country = Carmen::Country.coded('US') %>
 						  <%#= Carmen::Country.coded('US').subregions.coded(school.state) %>
-						  <td class="center "><%= Carmen::Country.coded('US').subregions.coded(school.state).try(:name) unless school.state.blank? %></td>
-						  <td class="center "><%= school.country %></td>
+						  <td class=""><%= Carmen::Country.coded('US').subregions.coded(school.state).try(:name) unless school.state.blank? %></td>
+						  <td class=""><%= school.country %></td>
 						  <td>
 						  	<% if can? :update, :schools %>
 						    	<%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %>  
@@ -137,4 +137,25 @@
 	             }
 	      });
 	});	
+	
+	// $('.quick-edit').click(
+// 	    function(){
+// 	        var text = $(this).text();
+// 	        $(this).text('');
+// 			//alert($(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller'));
+// 			//alert($(this).data('col'));
+// 			controller_name = $(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller');
+// 			edited_column_name = $(this).data('col');
+// 	        $('<textarea />').appendTo($(this)).val(text).select().blur(
+// 			    function(){
+//  	               var newText = $(this).val();
+//    			    jQuery.get("<%#= url_for(:controller=>'schools',:action=>'update_school')%>",{ column_name : 'district', edited_value : $(this).val()},
+//      	              function(data) {
+// 					     jQuery("#school-dist").html(data);
+//     	              });
+// 				   $(this).parent().text(newText),find('textarea').remove();
+// 	               alert(newText);
+// 			    
+// 				});
+// 	    });
 </script>
