--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -37,9 +37,9 @@
 		                <tr class="odd gradeX" data-no-turbolink>
 		                  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
 		                  <td class=""><%= school.code %></td>
-		                  <td class="school-name"><%= link_to school.name, school_path(school), :title=>"View School Details" %></td>
-		                  <td class="quick-edit" data-col="district" id="school-dist"><%= school.district %></td>
-		                  <td class="quick-edit"><%= school.city %></td>
+		                  <td class="quick-edit" data-col="name" data-id='<%= school.id%>'><%= school.name %><%#= link_to school.name, school_path(school), :title=>"View School Details" %></td>
+		                  <td class="quick-edit" data-col="district" data-id='<%= school.id%>'><%= school.district %></td>
+		                  <td class="quick-edit" data-col="city" data-id='<%= school.id%>'><%= school.city %></td>
 		                  <%#= @country = Carmen::Country.coded('US') %>
 						  <%#= Carmen::Country.coded('US').subregions.coded(school.state) %>
 						  <td class=""><%= Carmen::Country.coded('US').subregions.coded(school.state).try(:name) unless school.state.blank? %></td>
@@ -138,24 +138,26 @@
 	      });
 	});	
 	
-	// $('.quick-edit').click(
+// $(document).ready(function(){	
+// 	$('.quick-edit').click(
 // 	    function(){
 // 	        var text = $(this).text();
 // 	        $(this).text('');
-// 			//alert($(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller'));
-// 			//alert($(this).data('col'));
-// 			controller_name = $(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller');
-// 			edited_column_name = $(this).data('col');
+// 			//             alert($(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller'));
+// 			// alert($(this).data('col'));
+// 			// alert($(this).data('code'));
+// 			// controller_name = $(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller');
+// 			var edited_column_name = $(this).data('col');
+// 			var edited_school_id = $(this).data('id');
 // 	        $('<textarea />').appendTo($(this)).val(text).select().blur(
 // 			    function(){
 //  	               var newText = $(this).val();
-//    			    jQuery.get("<%#= url_for(:controller=>'schools',:action=>'update_school')%>",{ column_name : 'district', edited_value : $(this).val()},
+//    			    jQuery.get("<%#= url_for(:controller => controller_name, :action=>'quick_edit_school')%>",{ column_name : edited_column_name, edited_value : $(this).val(), id : edited_school_id},
 //      	              function(data) {
-// 					     jQuery("#school-dist").html(data);
+// 					    // jQuery("#school-dist").html(data);
 //     	              });
 // 				   $(this).parent().text(newText),find('textarea').remove();
-// 	               alert(newText);
-// 			    
-// 				});
+// 	            });
 // 	    });
+//  });		
 </script>
