--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -138,26 +138,26 @@
 	      });
 	});	
 	
-// $(document).ready(function(){	
-// 	$('.quick-edit').click(
-// 	    function(){
-// 	        var text = $(this).text();
-// 	        $(this).text('');
-// 			//             alert($(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller'));
-// 			// alert($(this).data('col'));
-// 			// alert($(this).data('code'));
-// 			// controller_name = $(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller');
-// 			var edited_column_name = $(this).data('col');
-// 			var edited_school_id = $(this).data('id');
-// 	        $('<textarea />').appendTo($(this)).val(text).select().blur(
-// 			    function(){
-//  	               var newText = $(this).val();
-//    			    jQuery.get("<%#= url_for(:controller => controller_name, :action=>'quick_edit_school')%>",{ column_name : edited_column_name, edited_value : $(this).val(), id : edited_school_id},
-//      	              function(data) {
-// 					    // jQuery("#school-dist").html(data);
-//     	              });
-// 				   $(this).parent().text(newText),find('textarea').remove();
-// 	            });
-// 	    });
-//  });		
+$(document).ready(function(){	
+	$('.quick-edit').click(
+	    function(){
+	        var text = $(this).text();
+	        $(this).text('');
+			//             alert($(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller'));
+			// alert($(this).data('col'));
+			// alert($(this).data('code'));
+			// controller_name = $(this).parentsUntil( $( "tr.odd gradeX" ), ".table" ).data('controller');
+			var edited_column_name = $(this).data('col');
+			var edited_school_id = $(this).data('id');
+	        $('<textarea />').appendTo($(this)).val(text).select().blur(
+			    function(){
+ 	               var newText = $(this).val();
+   			    jQuery.get("<%#= url_for(:controller => controller_name, :action=>'quick_edit_school')%>",{ column_name : edited_column_name, edited_value : $(this).val(), id : edited_school_id},
+     	              function(data) {
+					    // jQuery("#school-dist").html(data);
+    	              });
+				   $(this).parent().text(newText),find('textarea').remove();
+	            });
+	    });
+ });		
 </script>
